# isp-seminar-3

./: .gitignore  LICENSE  README.md  main.py  mmd.py  pyproject.toml  seminar.py  seminar_part_2.ipynb  utils.py
