[project]
name = "isp-seminar-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.7.0",
    "jax~=0.6.0",
    "jaxlib~=0.6.0",
    "jupyterlab>=4.5.0",
    "marimo>=0.18.0",
    "matplotlib>=3.10.7",
    "optax>=0.2.6",
    "pennylane>=0.43.1",
    "qutip>=5.2.2",
]
